# sbVirtualDisplay

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-package.yml
sbvirtualdisplay/: __init__.py  __version__.py  abstractdisplay.py  display.py  easyprocess.py  unicodeutil.py  xauth.py  xephyr.py  xvfb.py  xvnc.py
test/: test_unit.py
tests/: ReadMe.md  test_basic_flow.py
